[Imp] changes to modules, file structure, general chaos

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 presentation_data/*
 raw_data/*
 updates/reports/update_template.md
+src/presentation_data/*
+src/raw_data/*
+src/updates/reports/update_template.md
 
 
